--- a/src/framework/_flex.scss
+++ b/src/framework/_flex.scss
@@ -16,93 +16,95 @@
 /*============================================================================*\
    Align (items / self / content)
 \*============================================================================*/
+$align: (start, center, end);
+
 @if $has-classes {
-  .flex-align-start {
+  .align-start {
     align-items: flex-start;
   }
 
-  .flex-align-center {
+  .align-center {
     align-items: center;
   }
 
-  .flex-align-end {
+  .align-end {
     align-items: flex-end;
   }
 
-  .flex-align-stretch {
+  .align-stretch {
     align-items: stretch;
   }
 
-  .flex-align-self-start {
+  .align-self-start {
     align-self: flex-start;
   }
 
-  .flex-align-self-center {
+  .align-self-center {
     align-self: center;
   }
 
-  .flex-align-self-end {
+  .align-self-end {
     align-self: flex-end;
   }
 
-  .flex-align-self-stretch {
+  .align-self-stretch {
     align-self: stretch;
   }
 
-  .flex-align-content-start {
+  .align-content-start {
     align-content: flex-start;
   }
 
-  .flex-align-content-center {
+  .align-content-center {
     align-content: center;
   }
 
-  .flex-align-content-end {
+  .align-content-end {
     align-content: flex-end;
   }
 
-  .flex-align-content-stretch {
+  .align-content-stretch {
     align-content: stretch;
   }
 
-  .flex-align-content-around {
+  .align-content-around {
     align-content: space-around;
   }
 
-  .flex-align-content-between {
+  .align-content-between {
     align-content: space-between;
   }
 
   @include for-each-breakpoints using ($breakpoint) {
-    .flex-align-start--#{$breakpoint} {
+    .align-start--#{$breakpoint} {
       align-items: flex-start;
     }
 
-    .flex-align-center--#{$breakpoint} {
+    .align-center--#{$breakpoint} {
       align-items: center;
     }
 
-    .flex-align-end--#{$breakpoint} {
+    .align-end--#{$breakpoint} {
       align-items: flex-end;
     }
 
-    .flex-align-stretch--#{$breakpoint} {
+    .align-stretch--#{$breakpoint} {
       align-items: stretch;
     }
 
-    .flex-align-self-start--#{$breakpoint} {
+    .align-self-start--#{$breakpoint} {
       align-self: flex-start;
     }
 
-    .flex-align-self-center--#{$breakpoint} {
+    .align-self-center--#{$breakpoint} {
       align-self: center;
     }
 
-    .flex-align-self-end--#{$breakpoint} {
+    .align-self-end--#{$breakpoint} {
       align-self: flex-end;
     }
 
-    .flex-align-self-stretch--#{$breakpoint} {
+    .align-self-stretch--#{$breakpoint} {
       align-self: stretch;
     }
   }
@@ -112,52 +114,52 @@
    Justify (content / items)
 \*============================================================================*/
 @if $has-classes {
-  .flex-justify-start {
+  .justify-start {
     justify-content: flex-start;
   }
 
-  .flex-justify-center {
+  .justify-center {
     justify-content: center;
   }
 
-  .flex-justify-end {
+  .justify-end {
     justify-content: flex-end;
   }
 
-  .flex-justify-around {
+  .justify-around {
     justify-content: space-around;
   }
 
-  .flex-justify-between {
+  .justify-between {
     justify-content: space-between;
   }
 
-  .flex-justify-evenly {
+  .justify-evenly {
     justify-content: space-evenly;
   }
 
   @include for-each-breakpoints using ($breakpoint) {
-    .flex-justify-start--#{$breakpoint} {
+    .justify-start--#{$breakpoint} {
       justify-content: flex-start;
     }
 
-    .flex-justify-center--#{$breakpoint} {
+    .justify-center--#{$breakpoint} {
       justify-content: center;
     }
 
-    .flex-justify-end--#{$breakpoint} {
+    .justify-end--#{$breakpoint} {
       justify-content: flex-end;
     }
 
-    .flex-justify-around--#{$breakpoint} {
+    .justify-around--#{$breakpoint} {
       justify-content: space-around;
     }
 
-    .flex-justify-between--#{$breakpoint} {
+    .justify-between--#{$breakpoint} {
       justify-content: space-between;
     }
 
-    .flex-justify-evenly--#{$breakpoint} {
+    .justify-evenly--#{$breakpoint} {
       justify-content: space-evenly;
     }
   }
