--- a/src/framework/_flex.scss
+++ b/src/framework/_flex.scss
@@ -318,64 +318,44 @@ $align: (start, center, end);
 /*============================================================================*\
    Grow / Shrink
 \*============================================================================*/
-$flex-grow: (0, 1) !default;
+$flex-grows: (0, 1) !default;
+$flex-shrinks: (0, 1) !default;
+$flexes: (0, auto, none) !default;
 
 @if $has-classes {
-  .flex-grow {
-    flex-grow: 1;
-  }
-
-  .flex-no-grow {
-    flex-grow: 0;
-  }
-
-  .flex-shrink {
-    flex-shrink: 1;
-  }
-
-  .flex-no-shrink {
-    flex-shrink: 0;
-  }
-
-  .flex-1 {
-    flex: 1;
-  }
-
-  .flex-auto {
-    flex: auto;
-  }
-
-  .flex-none {
-    flex: none;
-  }
-
-  @include for-each-breakpoints using ($breakpoint) {
-    .flex-grow--#{$breakpoint} {
-      flex-grow: 1;
+  @each $value in $flex-grows {
+    .flex-grow-#{$value} {
+      flex-grow: $value;
     }
 
-    .flex-no-grow--#{$breakpoint} {
-      flex-grow: 0;
+    @include for-each-breakpoints using ($breakpoint) {
+      .flex-grow-#{$value}--#{$breakpoint} {
+        flex-grow: $value;
+      }
+    }
+  }
+
+  @each $value in $flex-shrinks {
+    .flex-shrink-#{$value} {
+      flex-grow: $value;
     }
 
-    .flex-shrink--#{$breakpoint} {
-      flex-shrink: 1;
+    @include for-each-breakpoints using ($breakpoint) {
+      .flex-shrink-#{$value}--#{$breakpoint} {
+        flex-grow: $value;
+      }
+    }
+  }
+
+  @each $value in $flexes {
+    .flex-#{$value} {
+      flex: $value;
     }
 
-    .flex-no-shrink--#{$breakpoint} {
-      flex-shrink: 0;
-    }
-
-    .flex-1--#{$breakpoint} {
-      flex: 1;
-    }
-
-    .flex-auto--#{$breakpoint} {
-      flex: auto;
-    }
-
-    .flex-none--#{$breakpoint} {
-      flex: none;
+    @include for-each-breakpoints using ($breakpoint) {
+      .flex-#{$value}--#{$breakpoint} {
+        flex: $value;
+      }
     }
   }
 }
