--- a/src/framework/index.scss
+++ b/src/framework/index.scss
@@ -2,7 +2,7 @@
    Main framework file
 \*============================================================================*/
 
-/** @type {Boolean} Enable of disable the helper classes */
+/** @type {Boolean} Do we need classes? */
 $has-classes: false !default;
 
 // Import everything!
