--- a/tests/src/index.scss
+++ b/tests/src/index.scss
@@ -1,5 +1,5 @@
 @import './config';
 
 $has-classes: true;
-@import '../../src/index.scss';
+@import '../../src/framework/index';
 $has-classes: false;
