Execute lint fix before commit

--- a/src/framework/_typography.scss
+++ b/src/framework/_typography.scss
@@ -224,7 +224,7 @@ $type-fonts: (
   }
 
   $font: map-get($type-fonts, $type-font);
-  $stack: map-get($font, 'stack');;
+  $stack: map-get($font, 'stack');
 
   @return unquote($stack);
 }
