Correct a missing parameter for type-rem-<size> per breakpoint

--- a/src/framework/_typography.scss
+++ b/src/framework/_typography.scss
@@ -151,7 +151,7 @@ $type-sizes: (
       }
 
       .type-rem-#{$size}--#{$breakpoint} {
-        @include fz($size);
+        @include fz($size, 'rem');
       }
     }
   }
